# roguelite

./: Cargo.toml  build.rs  index.html  rustfmt.toml
.cargo/: config.toml
images/: blinding_light.xcf  gold.xcf  green_slime.xcf  magic_missile.xcf  potion.xcf  potion_of_regeneration.xcf  slimeball.xcf  small_mouse.xcf  stab.xcf  sword.xcf  throwing_knife.xcf
src/: attack.rs  config.rs  draw.rs  enchantments.rs  init_game.rs  input.rs  items.rs  main.rs  map.rs  math.rs  player.rs
src/attacks/: blinding_light.rs  magic_missle.rs  mod.rs  slash.rs  slimeball.rs  stab.rs  throwing_knife.rs
src/monsters/: mod.rs  slime.rs  small_rat.rs
src/net/: mod.rs
