[package]
name = "roguelite"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true

[dependencies]
macroquad = { git = "https://github.com/billyb2/macroquad", default-features = false }
gilrs = { version = "0.10" }
once_cell = { version = "1" }
rayon = { version = "1" }
image = { version = "*", default-features = false, features = ["webp"] }
pathfinding = { version = "3", default-features = false }
