[package]
name = "roguelite"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
lto = "fat"
panic = "abort"

[dependencies]
macroquad = { version = "0.3" }
gilrs = { version = "0.10", optional = true }
once_cell = { version = "1" }
rayon = { version = "1", optional = true }
image = { version = "*", default-features = false, features = ["webp"] }
pathfinding = { version = "3", default-features = false }

[features]
default = ["native"]

native = ["rayon", "gilrs"]
