[package]
name = "roguelite"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
lto = "fat"
panic = "abort"

[dependencies]
macroquad = { version = "0.3" }
gilrs = { version = "0.10", optional = true }
once_cell = { version = "1" }
rayon = { version = "1", optional = true }
image = { version = "*", default-features = false, features = ["webp"] }
pathfinding = { version = "3", default-features = false }
egui-macroquad = "0.12"
egui = { version = "0.19" }
ggrs = { version = "0.9" }
bytemuck = { version = "1" }
bincode = "1"
serde = "1"
glam = { version = "0.21", features = ["serde"]}
ron = { version = "0.8" }

[features]
default = ["native"]
native = ["rayon", "gilrs"]
